didn't fully commit for some reason?

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "profile-generator",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "inquirer": "^8.2.4"
   },
